# deep-rl

./: README.md  pyproject.toml
models/atari/: data.py  model.py  train.ipynb  train.py
models/atari/runs/: predictor_model.pt
models/frozen-lake/: deep-q-learning.py
