[project]
name = "deep-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autorom>=0.6.1",
    "gymnasium[accept-rom-license,atari,other]>=1.2.3",
    "ipykernel>=7.2.0",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 110

[tool.ruff.format]
skip-magic-trailing-comma = false
